# planning-parking

./: .gitignore  Makefile  main.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
include/: data.h  environment.h  graph.h  map.h  planner.h
logs/fap_planner/: build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  (+1 more)
maps/: b_level_map.csv  base_map.csv  mit_base_map.csv
python/: dubins_path.py  generate_blocks_covered.py  motionprims.py  motionprims_dubin.py  motionprims_dubin_updated.py  motionprims_spline.py  mprims.json  mprims_config.json  mprims_config_spline.json  mprims_dubin.json  mprims_dubin_updated.json  mprims_new.json  mprims_spline.json  rviz_interface.py
resources/: project2.bag  project3.bag
scripts/: base_map.csv  csv_to_image.py  map_creator.py  mit_base_map_wp.txt  mit_base_map_wp_turn.txt  mit_base_map_wp_turn2.txt  path_plotter.py  pc2_to_csv.py  spline_creator.py  test.py  traversability_map_creator.py  xyz_raw.csv
src/: a.out  environment.cpp  graph.cpp  map.cpp  planner.cpp  waypoint_reader.cpp
traversability/: README.md  environment.yml  pyproject.toml
traversability/python_traversability/: compute_traversability.py  config.py  fuzzy_inference.py  grid_cloud.py  load_and_segment.py  traversability.py  vis.py
traversability/tests/: test_python_traversability.py
waypoints/: b_level_map_wp.txt  mit_base_map_rp.txt  mit_base_map_wp.txt  mit_base_map_wp_wt1.txt
(+50 files in other folders)
