[tool.poetry]
name = "python-traversability"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
simpful = "^2.7.0"
matplotlib = "^3.5.2"
pdal = "^3.1.2"
sacred = "^0.8.2"
pymongo = "^4.1.1"
pyvista = "^0.34.2"
tqdm = "^4.64.0"
scikit-image = "^0.19.3"
ubelt = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
